Fixed layout bugs in Input Certificate Details page

--- a/public/css/input-details-page.css
+++ b/public/css/input-details-page.css
@@ -1,3 +1,23 @@
+* :not(button){
+  box-sizing: content-box;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+}
+
+#main-container {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
 .back-btn-container {
   display: flex;
   flex-direction: row;
